update latest changes to plotly graphs in jnotebook

--- a/IPYNB/Plots_US_Cities_Map_World_Country_Map.ipynb
+++ b/IPYNB/Plots_US_Cities_Map_World_Country_Map.ipynb
@@ -59013,26 +59013,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>billing_region</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>sum_actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>114648</td>\n",
+       "      <td>114647.765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>126278</td>\n",
+       "      <td>126278.190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>129322</td>\n",
+       "      <td>129321.910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>140342</td>\n",
+       "      <td>140342.385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>149560</td>\n",
+       "      <td>149560.390</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.head of    billing_region  year     sum  sum_actual\n",
+       "   billing_region  year     sum  sum_actual\n",
        "8        Virginia  2021  114648  114647.765\n",
        "5  North Carolina  2021  126278  126278.190\n",
        "6    Pennsylvania  2021  129322  129321.910\n",
        "3      New Jersey  2021  140342  140342.385\n",
-       "2        Illinois  2021  149560  149560.390\n",
-       "9      Washington  2021  160613  160613.145\n",
-       "1         Florida  2021  239539  239538.990\n",
-       "4        New York  2021  259753  259752.595\n",
-       "7           Texas  2021  451655  451655.420\n",
-       "0      California  2021  858211  858211.500>"
+       "2        Illinois  2021  149560  149560.390"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59040,7 +59100,7 @@
    "source": [
     "df_states=pd.read_csv('../Data/top_10_us_states_2021_sales.csv')\n",
     "df_states=df_states.sort_values(by='sum', ascending=True)\n",
-    "df_states.head"
+    "df_states.head()"
    ]
   },
   {
